--- a/index.html
+++ b/index.html
@@ -14,32 +14,33 @@
     <title>Document</title>
   </head>
   <body>
-    <!--Heading tags-->
-    <h1>Bootstrap 5 Tutorial</h1>
-    <h2>this is an h2</h2>
-    <h3>this is an h3</h3>
-    <h2 class="h3">this is an h2 tag with the h3 class</h2>
-    <!--display headings-->
-    <h1 class="display-1">dispaly 1 heading</h1>
-    <h1 class="display-2">dispaly 1 heading</h1>
-    <h1 class="display-6">dispaly 1 heading</h1>
-    <p class="display-1">p tag width dispaly-1</p>
-    <!--lead text & alignment-->
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, a!</p>
-    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-    <p class="tead text-center">hello ninjas</p>
-    <p class="tead text-end">hello ninjas</p>
-    <p class="tead text-start">hello ninjas</p>
-    <!--text decoration & font weight-->
-    <p class="text-decoration-underline">this is underlined text</p>
-    <p class="text-decoration-line-through">this is line through text</p>
-    <p class="fw-bold">this is bold text</p>
-    <small>this is small text</small>
-    <!-- text color-->
-    <p class="text-primary">theme primary colour</p>
-    <!--bg color-->
-    <p class="text-white bg-primary">white text on primary bg</p>
+    <!--basic buttons-->
+    <h2>Buttons</h2>
+    <button class="btn btn-primary">primary button</button>
+    <button class="btn btn-secondary">primary button</button>
+    <!-- anchor tags as buttons-->
+    <h2>links as buttons</h2>
+    <a href="#" class="btn btn-info">info anch tag</a>
+    <a href="#" class="btn btn-success">success anchor tag</a>
+    <!-- button sizes -->
+    <h2>button sizes</h2>
+    <button class="btn btn-lg btn-danger">large daner button</button>
+    <button class="btn btn-sm btn-warning">small worning button</button>
+    <!-- outlined styles-->
+    <h2>Button styles</h2>
+    <button class="btn btn-outline-primary">outlined primary button</button>
+    <button class="btn btn-outline-secondary btn-lg">
+      outlined primary button
+    </button>
 
+    <!--button group-->
+    <h2>Button groups</h2>
+
+    <div class="btn-group">
+      <a href="#" class="btn btn-primary">button 1</a>
+      <a href="#" class="btn btn-warning">button 2</a>
+      <a href="#" class="btn btn-success">button 3</a>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
