--- a/index.html
+++ b/index.html
@@ -14,34 +14,41 @@
     <title>Document</title>
   </head>
   <body>
-    <!--margin and padding-->
-    <div class="bg-primary m-1 p-1">small maring and padding</div>
-    <div class="bg-primary m-5 p-5">small maring and padding</div>
-    <div class="bg-primary my-3 px-5">
-      margin in y direction, padding in x direction
+    <div class="container my-5">
+      <h2>normal container</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est fuga ea
+        quibusdam repellat doloribus iste. Velit, soluta, maxime minima magni
+        similique fuga cumque dicta saepe odio aliquid sunt tempora dolor?
+      </p>
     </div>
-    <div class="bg-primary mt-3 mb-4 ps-5 pt-4 pe-2 pb-1 ms-5 me-1">
-      m & p for each direction
+    <div class="container-fluid">
+      <h2>fluid container</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum eveniet
+        explicabo, voluptates nemo culpa, debitis similique dolor, consequuntur
+        placeat quis est sit quaerat aspernatur excepturi molestiae earum labore
+        error. Eaque.
+      </p>
     </div>
-    <!--borders-->
-    <div class="m-3 p-3 border">default border</div>
-    <div class="m-3 p-3 border-top border-end">individual border</div>
-    <div class="m-3 p-3 border-start border-success">border succes col</div>
-    <div class="m-3 p-3 border-start border-danger border-5">
-      thicekr border
+    <div class="container-lg my-5">
+      <h2>100% width until lg screens, then container</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, ipsum
+        quasi a amet officiis impedit magnam nesciunt neque, nam consequatur ut
+        necessitatibus deserunt et alias corrupti vero repellat veritatis.
+        Optio!
+      </p>
     </div>
-    <div class="m-3 p-3 rounded border border-5">rounder corners</div>
-    <div class="m-3 p-3 rounded-pill border border-5"></div>
-    <!--box shadow-->
-    <div class="m-3 p-3 shadow-sm">element with box shadow</div>
-    <div class="m-3 p-3 shadow">element with box shadow</div>
-    <!--font weight-->
-    <p class="fw-bold">bold text</p>
-    <p class="fw-bolder">bolder text</p>
-    <p>text</p>
-    <p class="fw-light">light text</p>
-    <p class="fst-italic">italic text</p>
-    <p class="fst-italic fw-light">italic light text</p>
+    <div class="container-xl my-5">
+      <h2>100% width until xl screens, then container</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque,
+        maiores? Quae assumenda, consequatur tenetur cumque dolor omnis, ipsa
+        sequi dolorem reprehenderit eaque delectus! Eum molestias tempore,
+        eligendi perspiciatis aliquam alias?
+      </p>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
