--- a/index.html
+++ b/index.html
@@ -14,40 +14,65 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container my-5">
-      <h2>normal container</h2>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est fuga ea
-        quibusdam repellat doloribus iste. Velit, soluta, maxime minima magni
-        similique fuga cumque dicta saepe odio aliquid sunt tempora dolor?
-      </p>
+    <div class="container-lg my-5">
+      <h2>basic grid</h2>
+      <div class="row">
+        <div class="col">
+          <div class="p-5 bg-primary text-light">col 1</div>
+        </div>
+        <div class="col">
+          <div class="p-5 bg-primary text-light">col 2</div>
+        </div>
+        <div class="col">
+          <div class="p-5 bg-primary text-light">col 3</div>
+        </div>
+        <div class="col">
+          <div class="p-5 bg-primary text-light">col 4</div>
+        </div>
+      </div>
     </div>
-    <div class="container-fluid">
-      <h2>fluid container</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum eveniet
-        explicabo, voluptates nemo culpa, debitis similique dolor, consequuntur
-        placeat quis est sit quaerat aspernatur excepturi molestiae earum labore
-        error. Eaque.
-      </p>
+
+    <div class="container-lg my-5">
+      <h2>column widths</h2>
+      <div class="row">
+        <div class="col-6">
+          <div class="p-5 bg-primary text-light">col 1</div>
+        </div>
+        <div class="col-3">
+          <div class="p-5 bg-primary text-light">col 2</div>
+        </div>
+        <div class="col-3">
+          <div class="p-5 bg-primary text-light">col 3</div>
+        </div>
+      </div>
     </div>
     <div class="container-lg my-5">
-      <h2>100% width until lg screens, then container</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, ipsum
-        quasi a amet officiis impedit magnam nesciunt neque, nam consequatur ut
-        necessitatibus deserunt et alias corrupti vero repellat veritatis.
-        Optio!
-      </p>
+      <h2>responsive column widths</h2>
+      <div class="row">
+        <div class="col-sm-4 col-lg-6">
+          <div class="p-5 bg-primary text-light">col 1</div>
+        </div>
+        <div class="col-sm-4 col-lg-3">
+          <div class="p-5 bg-primary text-light">col 2</div>
+        </div>
+        <div class="col-sm-4 col-lg-3">
+          <div class="p-5 bg-primary text-light">col 3</div>
+        </div>
+      </div>
     </div>
-    <div class="container-xl my-5">
-      <h2>100% width until xl screens, then container</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque,
-        maiores? Quae assumenda, consequatur tenetur cumque dolor omnis, ipsa
-        sequi dolorem reprehenderit eaque delectus! Eum molestias tempore,
-        eligendi perspiciatis aliquam alias?
-      </p>
+    <div class="container-lg my-5">
+      <h2>justifying columns</h2>
+      <div class="row justify-content-center">
+        <div class="col-md-3">
+          <div class="p-5 bg-primary text-light">col 1</div>
+        </div>
+        <div class="col-md-3">
+          <div class="p-5 bg-primary text-light">col 2</div>
+        </div>
+        <div class="col-md-3">
+          <div class="p-5 bg-primary text-light">col 3</div>
+        </div>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
