--- a/index.html
+++ b/index.html
@@ -12,68 +12,38 @@
     />
 
     <title>Document</title>
+    <style>
+      section {
+        padding: 60px 0;
+      }
+    </style>
   </head>
   <body>
-    <div class="container-lg my-5">
-      <h2>basic grid</h2>
-      <div class="row">
-        <div class="col">
-          <div class="p-5 bg-primary text-light">col 1</div>
-        </div>
-        <div class="col">
-          <div class="p-5 bg-primary text-light">col 2</div>
-        </div>
-        <div class="col">
-          <div class="p-5 bg-primary text-light">col 3</div>
-        </div>
-        <div class="col">
-          <div class="p-5 bg-primary text-light">col 4</div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container-lg my-5">
-      <h2>column widths</h2>
-      <div class="row">
-        <div class="col-6">
-          <div class="p-5 bg-primary text-light">col 1</div>
-        </div>
-        <div class="col-3">
-          <div class="p-5 bg-primary text-light">col 2</div>
-        </div>
-        <div class="col-3">
-          <div class="p-5 bg-primary text-light">col 3</div>
+    <!--navbar-->
+    <!--main image & intro text-->
+    <section id="intro">
+      <div class="container-lg">
+        <div class="row justify-content-center align-items-center">
+          <div class="col-md-5 text-center text-md-start">
+            <h1>
+              <div class="display-2">Black-Belt</div>
+              <div class="display-5">Your Coding Skills</div>
+            </h1>
+            <p class="lead my-4 text-muted">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, quis!
+            </p>
+            <a href="#pricing" class="btn btn-secondary btn-lg">Buy now</a>
+          </div>
+          <div class="col-md-5 text-center d-none d-md-block">
+            <img
+              class="img-fluid"
+              src="/assets/ebook-cover.png"
+              alt="ebook cover"
+            />
+          </div>
         </div>
       </div>
-    </div>
-    <div class="container-lg my-5">
-      <h2>responsive column widths</h2>
-      <div class="row">
-        <div class="col-sm-4 col-lg-6">
-          <div class="p-5 bg-primary text-light">col 1</div>
-        </div>
-        <div class="col-sm-4 col-lg-3">
-          <div class="p-5 bg-primary text-light">col 2</div>
-        </div>
-        <div class="col-sm-4 col-lg-3">
-          <div class="p-5 bg-primary text-light">col 3</div>
-        </div>
-      </div>
-    </div>
-    <div class="container-lg my-5">
-      <h2>justifying columns</h2>
-      <div class="row justify-content-center">
-        <div class="col-md-3">
-          <div class="p-5 bg-primary text-light">col 1</div>
-        </div>
-        <div class="col-md-3">
-          <div class="p-5 bg-primary text-light">col 2</div>
-        </div>
-        <div class="col-md-3">
-          <div class="p-5 bg-primary text-light">col 3</div>
-        </div>
-      </div>
-    </div>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
