--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
+    />
 
     <title>Document</title>
     <style>
@@ -23,7 +27,10 @@
     <nav class="navbar navbar-expand-md navbar-light">
       <div class="container-xxl">
         <a href="#intro" class="navbar-brand">
-          <span class="fw-bold text-secondary">Net Ninja Pro - the Book</span>
+          <span class="fw-bold text-secondary">
+            <i class="bi bi-book-half"></i>
+            Net Ninja Pro - the Book</span
+          >
         </a>
         <!--toggle button for mobile nav-->
         <button
@@ -354,14 +361,21 @@
     <section id="reviews" class="bg-light">
       <div class="container-lg">
         <div class="text-center">
-          <h2>Book Reviews</h2>
+          <h2><i class="bi bi-stars"></i>Book Reviews</h2>
           <p class="lead">What my students have said abhout the book...</p>
         </div>
 
-        <div class="row justify-content-center">
+        <div class="row justify-content-center my-5">
           <div class="col-lg-8">
             <div class="list-group">
               <div class="list-group-item py-3">
+                <div class="pb-2">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </div>
                 <h5 class="mb-1">A must buy for every aspiring web dev</h5>
                 <p class="mb-1">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo
@@ -372,6 +386,13 @@
                 <small>Review by Mario</small>
               </div>
               <div class="list-group-item py-3">
+                <div class="pb-2">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </div>
                 <h5 class="mb-1">A must buy for every aspiring web dev</h5>
                 <p class="mb-1">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo
@@ -382,6 +403,13 @@
                 <small>Review by Mario</small>
               </div>
               <div class="list-group-item py-3">
+                <div class="pb-2">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </div>
                 <h5 class="mb-1">A must buy for every aspiring web dev</h5>
                 <p class="mb-1">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo
@@ -392,6 +420,13 @@
                 <small>Review by Mario</small>
               </div>
               <div class="list-group-item py-3">
+                <div class="pb-2">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </div>
                 <h5 class="mb-1">A must buy for every aspiring web dev</h5>
                 <p class="mb-1">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo
@@ -402,6 +437,13 @@
                 <small>Review by Mario</small>
               </div>
               <div class="list-group-item py-3">
+                <div class="pb-2">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-half"></i>
+                </div>
                 <h5 class="mb-1">A must buy for every aspiring web dev</h5>
                 <p class="mb-1">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo
