--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, quis!
             </p>
             <a href="#pricing" class="btn btn-secondary btn-lg">Buy now</a>
+            <a
+              href="#sidebar"
+              class="d-block mt-3"
+              data-bs-toggle="offcanvas"
+              role="button"
+              aria-controls="sidebar"
+              >Explore my other books</a
+            >
           </div>
           <div class="col-md-5 text-center d-none d-md-block">
             <span
@@ -617,6 +625,32 @@
             <button class="btn btn-primary">submit</button>
           </div>
         </div>
+      </div>
+    </div>
+
+    <!--offcanvas-->
+    <div
+      class="offcanvas offcanvas-start"
+      tabindex="-1"
+      id="sidebar"
+      aria-labelledby="sidebar-label"
+    >
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="sidebar-label">My Other Books</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="offcanvas"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="offcanvas-body">
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+          deleniti quia nobis consequatur aut ipsum fuga, laboriosam ex qui
+          debitis eius magni soluta aliquam, iste quisquam nostrum rerum
+          placeat? Rerum?
+        </p>
       </div>
     </div>
     <script
