--- a/index.html
+++ b/index.html
@@ -651,6 +651,24 @@
           debitis eius magni soluta aliquam, iste quisquam nostrum rerum
           placeat? Rerum?
         </p>
+        <!--dropdown-->
+        <div class="dropdown mt-3">
+          <button
+            class="btn btn-secondary dropdown-toggle"
+            type="button"
+            id="book-dropdown"
+            data-bs-toggle="dropdown"
+          >
+            Choose a book title
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="book-dropdown">
+            <li>
+              <a href="#" class="dropdown-item">Become a React Superhero</a>
+              <a href="#" class="dropdown-item">Conquering Vue.js</a>
+              <a href="#" class="dropdown-item">Levelling up Your Next.js</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
     <script
